<?xml version="1.0"?>
<package format="2">
  <name>gs_pioneer_mini</name>
  <version>1.0.1</version>
  <description>The gs_pioneer_mini package</description>

  <maintainer email="ilya@eadsoft.com">Ilya Danilenko</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
